--- a/package.json
+++ b/package.json
@@ -1,14 +1,13 @@
 {
-    "name": "telegram-reminder-bot",
-    "version": "1.0.0",
-    "description": "Personal Telegram Reminder Bot",
-    "main": "index.js",
-    "scripts": {
-      "start": "node index.js"
-    },
-    "dependencies": {
-      "express": "^4.18.2",
-      "node-telegram-bot-api": "^0.61.0"
-    }
+  "name": "telegram-reminder-bot",
+  "version": "1.0.0",
+  "description": "Telegram Reminder Bot with luxon date handling",
+  "main": "index.js",
+  "scripts": {
+    "start": "node index.js"
+  },
+  "dependencies": {
+    "node-telegram-bot-api": "^0.61.0",
+    "luxon": "^3.3.0"
   }
-  
+}
